--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,3 +15,13 @@
 .fade-in {
     animation: fadeIn 0.3s ease-in;
 }
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+input[type="number"] {
+    -moz-appearance: textfield;
+}
